<resources>
    <string name="app_name">Incubator</string>

    <string name="bluetooth_connection">Connect to incubator</string>
    <string name="debug_mode">Debug mode</string>
    <string name="unwind_clamp">Unwind clamp</string>
    <string name="back">&lt; Back</string>
    <string name="next">Next &gt;</string>

    <string name="welcome_message">Welcome, Reuben</string>
    <string name="order">Order</string>
    <string name="customize">Customize</string>
    <string name="connecting">Connecting…</string>
    <string name="turning_on_bluetooth">Turning on bluetooth…</string>
    <string name="select_bt_device">Select bluetooth device</string>

    <string name="finish">Finish</string>
    <string name="making_pizza">Making your delicious pizza…</string>
    <string name="your_pizza_is_ready">Your pizza is ready!</string>

    <string name="summary">Summary</string>
    <string name="credit_card_label">Payment</string>

    <string name="order_label">Order summary</string>
    <string name="pizza_quantity">%s x1</string>
    <string name="order_fragment">order_fragment</string>
    <string name="connection_failed">Unable to connect device</string>
    <string name="price_default">HKD $100</string>

    <string name="visa">VISA</string>
    <string name="mastercard">Mastercard</string>
    <string name="wechat_pay">WeChat Pay</string>
    <string name="alipay">Alipay</string>

    <string name="visa_info">Ending in 4827</string>
    <string name="mastercard_info">Ending in 2392</string>
</resources>
